src/objects/Library_Item__c.object
<CustomObject>
    <description>A reservable library item, such as a book or AV equipment</description>
    <fields>
        <fullName>Author__c</fullName>
        <description>The author of the printed material</description>
        <label>Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Availability_Status__c</fullName>
        <formula>IF ( TEXT(Circulation_Status__c) != &apos;In Circulation&apos;, TEXT(Circulation_Status__c),
IF ( ISBLANK(Current_Check_Out__c), &apos;Available&apos;,
CASE ( Current_Check_Out__r.Check_Out_Status__c,
       &apos;Checked In&apos;, &apos;Available&apos;,
       Current_Check_Out__r.Check_Out_Status__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Availability Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barcode__c</fullName>
        <description>Unique barcode value</description>
        <label>Barcode</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <defaultValue>&quot;Book&quot;</defaultValue>
        <description>General category of the resource, such as Projector or Audio Book</description>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Library_Item_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Circulation_Status__c</fullName>
        <defaultValue>&quot;In Circulation&quot;</defaultValue>
        <label>Circulation Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Circulation</fullName>
                    <default>true</default>
                    <label>In Circulation</label>
                </value>
                <value>
                    <fullName>On Order</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Damaged</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Borrower_Email__c</fullName>
        <description>Email of user that has the library item check-out.</description>
        <formula>Current_Check_Out__r.Borrower__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Borrower Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Borrower_Name__c</fullName>
        <description>Link to the user that has the library item checked-out</description>
        <formula>HYPERLINK( 
Current_Check_Out__r.Borrower__c,
Current_Check_Out__r.Borrower__r.FirstName + &quot; &quot; +  Current_Check_Out__r.Borrower__r.LastName
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Borrower Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Check_Out_Change_Time__c</fullName>
        <description>Time of the latest change to the current check out status</description>
        <label>Current Check Out Change Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Check_Out_Status__c</fullName>
        <formula>IF (ISBLANK(Current_Check_Out__c), &quot;&quot;, Current_Check_Out__r.Check_Out_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Check Out Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Check_Out__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the current check-out  of this library resource</description>
        <label>Current Check Out</label>
        <referenceTo>Library_Item_Check_Out__c</referenceTo>
        <relationshipLabel>Current Library Item</relationshipLabel>
        <relationshipName>Current_Library_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Due_Back_Time__c</fullName>
        <formula>Current_Check_Out__r.Due_Back_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Due Back Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Descriptive information about resource</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>In_Circulation__c</fullName>
        <formula>ISPICKVAL(Circulation_Status__c, &apos;In Circulation&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Circulation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>Language of printed material</description>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Library_Item_Limit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Borrowing limit for the library item</description>
        <label>Library Item Limit</label>
        <referenceTo>Library_Item_Limit__c</referenceTo>
        <relationshipLabel>Library Item</relationshipLabel>
        <relationshipName>Library_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publisher_Manufacturer__c</fullName>
        <description>Publisher or Manufacturer</description>
        <label>Publisher / Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requires_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the item requires special delivery because of size or fragility</description>
        <label>Requires Delivery?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Search_Tags_Formula__c</fullName>
        <description>Combination of all non-searchable fields that need to be searchable</description>
        <formula>RecordType.Name + &apos; &apos; + 
TEXT(Category__c) + &apos; &apos; + 
TEXT(Language__c) + &apos; &apos; +
TEXT(Circulation_Status__c) + &apos; &apos; +
Availability_Status__c + &apos; &apos; +
Current_Check_Out__r.Borrower__r.FirstName + &apos; &apos; + 
Current_Check_Out__r.Borrower__r.LastName + &apos; &apos; +
Current_Borrower_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Search Tags Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Tags__c</fullName>
        <description>Custom search tags, separated by commas or &lt;enter&gt;</description>
        <label>Search Tags</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Subtitle__c</fullName>
        <description>Additional title text for long descriptive titles</description>
        <label>Subtitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+ Id , Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title Link</label>
        <type>Text</type>
    </fields>
    <label>Library Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Barcode__c</columns>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Author__c</columns>
        <columns>Publisher_Manufacturer__c</columns>
        <columns>Availability_Status__c</columns>
        <columns>Current_Due_Back_Time__c</columns>
        <columns>Current_Check_Out_Status__c</columns>
        <columns>Current_Borrower_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Checked_Out_andOverdue</fullName>
        <columns>Barcode__c</columns>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Availability_Status__c</columns>
        <columns>Current_Due_Back_Time__c</columns>
        <columns>Current_Borrower_Name__c</columns>
        <columns>Current_Borrower_Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Availability_Status__c</field>
            <operation>equals</operation>
            <value>Checked Out,Overdue</value>
        </filters>
        <label>Checked Out andOverdue</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Library Item</pluralLabel>
    <recordTypes>
        <fullName>AV_Equipment</fullName>
        <active>true</active>
        <description>Audio Visual Equipment</description>
        <label>AV Equipment</label>
    </recordTypes>
    <recordTypes>
        <fullName>Book</fullName>
        <active>true</active>
        <description>Printed materials</description>
        <label>Book</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Barcode</fullName>
        <active>true</active>
        <description>Barcode must be 14-char numeric string starting with 3{&lt;4-digit library code&gt;}{&lt;9-digit item code&gt;}</description>
        <errorConditionFormula>IF ($Setup.Library_Settings__c.Barcode_Prefix__c != &apos;&apos;, 
OR(
LEN( Barcode__c ) != 14,
LEFT( Barcode__c, 5) !=  &apos;3&apos; + $Setup.Library_Settings__c.Barcode_Prefix__c, 
NOT(ISNUMBER(RIGHT( Barcode__c, 9)))
),
false)</errorConditionFormula>
        <errorDisplayField>Barcode__c</errorDisplayField>
        <errorMessage>Barcode must be a 14 numeric string starting with 3{&lt;4-digit library code&gt;}{&lt;9-digit item code&gt;}</errorMessage>
    </validationRules>
</CustomObject>